[metadata]
name = gmailify
version = 1.0.0
author = Santosh Bhandari
description = This tool validates if gmail addresses and corporate emails with google mail servers are valid without being authenticated. The default thread is 10 to avoid being rate limited.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codedbrain/gmailify
project_urls = 
    Bug Tracker = https://github.com/codedbrain/gmailify/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[Options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src